# llm_zp

./: README.md  pyproject.toml  requirements.txt
src/llm_zp/: __init__.py  _llm_base_class.py  _test1.py  _test_llm.py  internvl3_5.py  llava_next_video.py  qwen_omni.py  qwen_vl.py
src/llm_zp/_automodel_infer/: __init__.py  _llm_base_class.py  _test_llm.py  internvl3_5.py  llama3.py  llava_next_video.py  qwen3.py  qwen_omni.py  qwen_vl.py
src/llm_zp/_llama_factory/: __init__.py  _get_template.py  _llama_factory_zp.py  _test_llamafactory.py
src/llm_zp/call_api/: __init__.py  _api_call.py  _api_call_zp.py  _api_key.py  _record_data.py
