[project]
name = "llm_zp"
version = "2.2.0"
description = "LLM usage utils of zp"
# requires-python = ">=3.8"
dependencies = [
    # "numpy", "pandas"
    "openai"
]
authors = [
    { name="Zhipang Wang", email="zhipangwang@gmail.com" },
]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    # "License :: OSI Approved :: MIT License",
    # "Operating System :: OS Independent",
]

# [project.scripts]
# zp = "script:zp_help"
# bgpy = "script:run_python_background"
# update_bashrc = "script:update_bashrc"
# zp_test = "script:zp_cmd_test"
# bgpy = "utils_zp.script.bg_python:run_python_background"

# [build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"